# codeql-devin-fixer

./: .codeql-fixer.example.yml  .gitignore  CHANGELOG.md  CODE_REVIEW.md  CONTRIBUTING.md  DEMO.md  README.md  action.yml  app-manifest.json  repo_registry.json  setup.sh
docs/: index.html  (+11 more)
telemetry/: .env  .env.example  Dockerfile  README.md  aggregation.py  app.py  config.py  database.py  demo_data.py  devin_service.py  docker-compose.yml  extensions.py  github_service.py  helpers.py  issue_tracking.py  migrate_json_to_sqlite.py  oauth.py  orchestrator_state.json  pdf_report.py  pyproject.toml  requirements.txt  verification.py
telemetry/demo_data/: _orchestrator_state.json  _prs.json  _verification.json  run-1-2025-11-04-171700.json  run-1.json  run-10-2026-01-23-173400.json  run-11-2025-11-10-141300.json  run-12-2025-11-21-135300.json  run-13-2025-12-02-111800.json  run-14-2025-12-15-075600.json  run-15-2026-01-04-100800.json  run-16-2026-01-09-171900.json  run-17-2026-01-18-184100.json  run-18-2025-11-03-150900.json  run-19-2025-11-03-173400.json  run-2-2025-11-12-091400.json  run-20-2025-11-04-091200.json  run-21-2025-11-07-111400.json  run-22-2025-11-28-134400.json  run-23-2025-12-01-083000.json  run-24-2025-12-03-182300.json  run-25-2026-01-23-064800.json  run-26-2026-01-23-074900.json  run-27-2026-01-25-073600.json  run-28-2025-11-01-104600.json  run-29-2025-11-18-071700.json  run-3-2025-11-14-164700.json  run-30-2025-11-25-153200.json  run-31-2025-12-09-153700.json  run-32-2025-12-24-115900.json  run-33-2026-01-04-105200.json  run-34-2026-01-24-135500.json  (+10 more)
(+265 files in other folders)
