[tool.poetry]
name = "telemetry"
version = "0.1.0"
description = "CodeQL Devin Fixer Telemetry Dashboard"
authors = ["marius-posa <mariusposa10@gmail.com>"]
readme = "README.md"
packages = [{ include = "telemetry" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.110.0"
uvicorn = {version = "^0.27.0", extras=["standard"]}
requests = "^2.31.0"
jinja2 = "^3.1.0"
python-dotenv = "^1.0.0"
fastapi-cli = "^0.0.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
